# SoLean

./: .gitignore  AGENTS.md  README.md  SoLean.lean  lake-manifest.json  lakefile.lean  pyproject.toml
.github/workflows/: ci.yml
SoLean/: AAPQArtifactsMain.lean  Artifacts.lean  Basic.lean  Bridge.lean  Compiler.lean  CounterArtifactsMain.lean  DSL.lean  Semantics.lean  Specs.lean  UInt256.lean  Yul.lean
SoLean/EVM/: Call.lean
SoLean/Examples/: AAPQEvmCall.lean  AAPQEvmCallGas.lean  AAPQIntegration.lean  AAPQSource.lean  AAWallet.lean  Counter.lean  CounterCompiler.lean  CounterYul.lean  FalconSimpleWallet.lean  LatticePublicKey.lean  PQVerifierWrapper.lean  ProtocolBoundaries.lean  SchemeParameters.lean  SimpleVault.lean  StructuredVerifier.lean  ToyVerifier.lean
docs/: README.md  aa-pq-integration-v0.md  aa-wallet-v0.md  aapq-demo.md  assumptions.md  compiler.md  counter-bridge-v1.md  counter-bridge-v2.md  counter-bridge-v3.md  counter-bridge-v4.md  counter-bridge-v5.md  counter-bridge-v7.md  counter-demo.md  counter-yul.md  counter.md  external-call-shim.md  pq-aa-roadmap.md  pq-verifier-wrapper-v0.md  roadmap.md  simple-vault.md  source-shape.md  status.md  toy-verifier-model.md  yul-subset.md
examples/: AAPQIntegration.sol  Counter.sol  SimpleVault.sol
scripts/: __init__.py  check_aapq_source.py  check_counter_bridge.py  check_equiv.py  classify_yul.py  demo_aapq_source.py  demo_counter_bridge.py  normalize_yul.py  solc_to_yul.py  solean_to_yul.py  solidity_to_solean.py  yul_subset.py
tests/: README.md  test_aapq_source.py  test_yul_tools.py
(+20 files in other folders)
